# nix-cpp-template

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix
src/: another.hpp  simple.cc  what_time.cc  what_time.cpp
